--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header id="home">
         <div>
-            <img class="img_logo" src="/Coffe_IMGS/logo(1).png" alt="Logo">
+            <img class="img_logo" src="/Coffee_IMGS/logo(1).png" alt="Logo">
         </div>
 
         <nav>
@@ -44,7 +44,7 @@
 
     <main>
         <section>
-            <img class="img_main" src="/Coffe_IMGS/home-img.jpg" alt="Xicará de café">
+            <img class="img_main" src="/Coffee_IMGS/home-img.jpg" alt="Xicará de café">
         </section>
 
         <section class="section_hero">
@@ -63,7 +63,7 @@
             <h2 class="h2_about"><span>Sobre</span> Nós</h2>
         </div>
         <section class="about_img_coffe">
-            <div class="img_about"><img src="/Coffe_IMGS/about-img.jpg" alt="xicara de café"></div>
+            <div class="img_about"><img src="/Coffee_IMGS/about-img.jpg" alt="xicara de café"></div>
             <div class="div_about">
                 <h3>o que faz nosso café especial?</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat neque hic ipsam placeat rerum qui
@@ -85,32 +85,32 @@
         </div>
         <section class="coffee_menu">
             <div class="coffee_item">
-                <img src="/Coffe_IMGS/menu-1.png" alt="Xicará de Café">
+                <img src="/Coffee_IMGS/menu-1.png" alt="Xicará de Café">
                 <p class="name_coffee">Café Expresso</p>
                 <p class="price_coffee">R$ 15.99 </p>
                 <button class="button_coffee">Adicione ao carrinho</button>
             </div>
-            <div class="coffee_item"><img src="/Coffe_IMGS/menu-2.png" alt="Xicará de Café">
+            <div class="coffee_item"><img src="/Coffee_IMGS/menu-2.png" alt="Xicará de Café">
                 <p class="name_coffee">Café Expresso</p>
                 <p class="price_coffee">R$ 15.99 </p>
                 <button class="button_coffee">Adicione ao carrinho</button>
             </div>
-            <div class="coffee_item"><img src="/Coffe_IMGS/menu-3.png" alt="Xicará de Café">
+            <div class="coffee_item"><img src="/Coffee_IMGS/menu-3.png" alt="Xicará de Café">
                 <p class="name_coffee">Café Expresso</p>
                 <p class="price_coffee">R$ 15.99 </p>
                 <button class="button_coffee">Adicione ao carrinho</button>
             </div>
-            <div class="coffee_item"><img src="/Coffe_IMGS/menu-4.png" alt="Xicará de Café">
+            <div class="coffee_item"><img src="/Coffee_IMGS/menu-4.png" alt="Xicará de Café">
                 <p class="name_coffee">Café Expresso</p>
                 <p class="price_coffee">R$ 15.99 </p>
                 <button class="button_coffee">Adicione ao carrinho</button>
             </div>
-            <div class="coffee_item"><img src="/Coffe_IMGS/menu-5.png" alt="Xicará de Café">
+            <div class="coffee_item"><img src="/Coffee_IMGS/menu-5.png" alt="Xicará de Café">
                 <p class="name_coffee">Café Expresso</p>
                 <p class="price_coffee">R$ 15.99 </p>
                 <button class="button_coffee">Adicione ao carrinho</button>
             </div>
-            <div class="coffee_item"><img src="/Coffe_IMGS/menu-6.png" alt="Xicará de Café">
+            <div class="coffee_item"><img src="/Coffee_IMGS/menu-6.png" alt="Xicará de Café">
                 <p class="name_coffee">Café Expresso</p>
                 <p class="price_coffee">R$ 15.99 </p>
                 <button class="button_coffee">Adicione ao carrinho</button>
@@ -124,43 +124,43 @@
         </div>
         <section class="comments_coffe">
             <div class="comment">
-                <img class="quotationmarks_comment" src="/Coffe_IMGS/quote-img.png" alt="Aspas duplas">
+                <img class="quotationmarks_comment" src="/Coffee_IMGS/quote-img.png" alt="Aspas duplas">
                 <p class="text_comment">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ad, libero magni vo
                     luptatum dolore ex iure eaque atque obcaecati amet.</p>
-                <img class="photo_people" src="/Coffe_IMGS/pic-3.png" alt="Homem">
+                <img class="photo_people" src="/Coffee_IMGS/pic-3.png" alt="Homem">
                 <p class="name_people_feedbacks">John Deo</p>
                 <div class="star_feedbacks">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
                 </div>
             </div>
             <div class="comment">
-                <img class="quotationmarks_comment" src="/Coffe_IMGS/quote-img.png" alt="Aspas duplas">
+                <img class="quotationmarks_comment" src="/Coffee_IMGS/quote-img.png" alt="Aspas duplas">
                 <p class="text_comment">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Facere labore sunt ex.</p>
-                <img class="photo_people" src="/Coffe_IMGS/pic-2.png" alt="Mulher">
+                <img class="photo_people" src="/Coffee_IMGS/pic-2.png" alt="Mulher">
                 <p class="name_people_feedbacks">Cloe Shurtz</p>
                 <div class="star_feedbacks">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
                 </div>
             </div>
             <div class="comment">
-                <img class="quotationmarks_comment" src="/Coffe_IMGS/quote-img.png" alt="Aspas duplas">
+                <img class="quotationmarks_comment" src="/Coffee_IMGS/quote-img.png" alt="Aspas duplas">
                 <p class="text_comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium molestias
                     commodi magni
                     expedita nihil accusamus.</p>
-                <img class="photo_people" src="/Coffe_IMGS/pic-1.png" alt="Homem">
+                <img class="photo_people" src="/Coffee_IMGS/pic-1.png" alt="Homem">
                 <p class="name_people_feedbacks">Miguel Arros</p>
                 <div class="star_feedbacks">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
-                    <img src="/Coffe_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
+                    <img src="/Coffee_IMGS/icons_star.png" alt="Estrela">
                 </div>
             </div>
         </section>
@@ -178,9 +178,9 @@
 
     <footer class="footer">
         <div class="icons_medias">
-            <img src="/Coffe_IMGS/icon_facebook.png" alt="Facebook">
-            <img src="/Coffe_IMGS/icon_instagram.png" alt="Instagram">
-            <img src="/Coffe_IMGS/icon_twitter.png" alt="Twitter">
+            <img src="/Coffee_IMGS/icon_facebook.png" alt="Facebook">
+            <img src="/Coffee_IMGS/icon_instagram.png" alt="Instagram">
+            <img src="/Coffee_IMGS/icon_twitter.png" alt="Twitter">
         </div>
     </footer>
 
